config-root/namespaces/jx-staging/node-hrrp3/node-hrrp3-node-hrrp3-deploy.yaml
# Source: node-hrrp3/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hrrp3-node-hrrp3
  labels:
    draft: draft-app
    chart: "node-hrrp3-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: node-hrrp3-node-hrrp3
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: node-hrrp3-node-hrrp3
    spec:
      serviceAccountName: node-hrrp3-node-hrrp3
      containers:
        - name: node-hrrp3
          image: "ghcr.io/denglanlan/node-hrrp3:1.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
