config-root/namespaces/jx-staging/node-hrrp3/node-hrrp3-svc.yaml
# Source: node-hrrp3/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hrrp3
  labels:
    chart: "node-hrrp3-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: node-hrrp3-node-hrrp3
