config-root/namespaces/jx-staging/node-hrrp3/node-hrrp3-ingress.yaml
# Source: node-hrrp3/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: node-hrrp3
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: node-hrrp3
              servicePort: 80
      host: node-hrrp3-jx-staging.jx3.sky-cloud.net
